Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </style>
   </head>
   <body>
-    
+    <main>
+
+   
     <div class="title">
       <h1>10,000+ of our users love our products</h1>
       <p>
@@ -124,5 +126,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Herson Meireles</a>.
     </footer>
+
+  </main>
   </body>
 </html>
