--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     
 
-    <section class="rates">
+    <div class="rates">
       <div class="rate item1">
         <div>
           <img src="./images/icon-star.svg" alt="">
@@ -73,7 +73,7 @@
         </div>
         <h2>Rated 5 Stars in BestTech</h2>
       </div>
-    </section>
+    </div>
     
   
     <div class="reviews one">
