--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
    
     <div class="title">
-      <h1>10,000+ of our users love our products</h1>
+      <h1>10,000+ of our users love our products.</h1>
       <p>
         We only provide great products combined with excellent customer service.
         See what our satisfied customers are saying about our services.
